--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,13 @@
         android:layout_height="wrap_content"/>
 
 
-    <!--<Button-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="next page"-->
-        <!--android:id="@+id/button1"/>-->
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="next page"
+        android:id="@+id/button1"/>
+
+
     <!--<android.support.v7.widget.Toolbar-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
