--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,20 +12,16 @@
         android:layout_height="wrap_content"/>
 
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="next page"
-        android:id="@+id/button1"/>
-
-
-    <!--<android.support.v7.widget.Toolbar-->
+    <!--<Button-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:id="@+id/toolbar">-->
+        <!--android:text="next page"-->
+        <!--android:id="@+id/button1"/>-->
 
-    <!--</android.support.v7.widget.Toolbar>-->
+
+
+
+
 
     <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
@@ -42,15 +38,30 @@
         <!--android:id="@+id/search_bar"></SearchView>-->
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/recycler_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:scrollbars="vertical"-->
+        <!--android:background="@android:color/darker_gray">-->
+
+
+
+    <!--</android.support.v7.widget.RecyclerView>-->
+
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabMode="fixed"
+        app:tabGravity="fill"/>
+
+
+
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:background="@android:color/darker_gray">
-
-
-
-    </android.support.v7.widget.RecyclerView>
+        android:id="@+id/viewpager"></android.support.v4.view.ViewPager>
 
 </LinearLayout>
