--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <!--<item name="android:windowTranslucentStatus">true</item>-->
         <!--<item name="android:windowTranslucentNavigation">true</item>-->
         <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+        <item name="windowNoTitle">true</item>
     </style>
 
 </resources>
