--- a/app/src/main/res/layout/activity_fragment_one.xml
+++ b/app/src/main/res/layout/activity_fragment_one.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.senamit.newspaperapps.Fragment_one"
-    android:background="@android:color/holo_red_dark">
-
+    android:background="@android:color/holo_red_dark"
+    tools:context="com.example.senamit.newspaperapps.Fragment_one">
 
     <android.support.v7.widget.RecyclerView
-    android:id="@+id/recycler_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:background="@android:color/holo_red_light"/>
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_red_light"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
