--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -4,41 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.senamit.newspaperapps.SearchResult"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.senamit.newspaperapps.SearchResult">
 
-
-    <include layout="@layout/toolbar_main"
+    <include
+        layout="@layout/toolbar_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/text1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text1"/>
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
-    android:id="@+id/recycler_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:background="@android:color/darker_gray">
-
-
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"
+        android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
-
-
-
-
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/recycler_view_search"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scrollbars="vertical"-->
-        <!--android:background="@android:color/darker_gray"/>-->
-
-
-
 
 </LinearLayout>
