--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -10,13 +10,11 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textStyle="italic"
         android:textColor="@android:color/white"
         android:id="@+id/toolbar_title"
         android:textSize="21sp"/>
-
-
 
 </android.support.v7.widget.Toolbar>
