--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/linear_layout_main"
+   android:fitsSystemWindows="true"
     tools:context="com.example.senamit.newspaperapps.MainActivity">
 
     <include
