--- a/app/src/main/res/layout/activity_news_items.xml
+++ b/app/src/main/res/layout/activity_news_items.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+
+    android:layout_marginTop="2dp"
+
     android:orientation="vertical">
 
 
@@ -13,9 +15,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_blue_bright"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:paddingLeft="40dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:background="#DCDCDC"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/newsHeadline"
