--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F44336</color>
-    <color name="colorPrimaryDark">#4527A0</color>
+    <color name="colorPrimary">#5da9dc</color>
+    <color name="colorPrimaryDark">#280b84</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
