loading is working.......by using dialog and ready for github

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,9 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
+        android:background="@color/colorPrimary"
+       app:tabTextColor="@color/TabtextColor"
+        app:tabSelectedTextColor="@color/TabtextColor"
         app:tabGravity="fill"
         app:tabMode="fixed" />
 
