Github submission revision- 2

--- a/app/src/main/res/layout/activity_news_items.xml
+++ b/app/src/main/res/layout/activity_news_items.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:layout_marginTop="2dp"
-
     android:orientation="vertical">
 
 
@@ -42,6 +40,10 @@
                 android:id="@+id/sectionName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/authorName"/>
 
         </LinearLayout>
 
