--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -2,19 +2,19 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
+    android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize">
 
     <TextView
+        android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textStyle="italic"
         android:textColor="@android:color/white"
-        android:id="@+id/toolbar_title"
-        android:textSize="21sp"/>
+        android:textSize="21sp"
+        android:textStyle="italic" />
 
 </android.support.v7.widget.Toolbar>
