--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#9C27B0</color>
     <color name="colorPrimaryDark">#7B1FA2</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="TabtextColor">#FFFFFF</color>
+    <color name="tabtextColor">#FFFFFF</color>
 </resources>
