--- a/app/src/main/res/layout/activity_news_items.xml
+++ b/app/src/main/res/layout/activity_news_items.xml
@@ -36,14 +36,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
             <TextView
+                android:layout_weight="1"
                 android:id="@+id/sectionName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/authorName"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
